fixed images and adjusted footer alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -102,28 +102,23 @@ a {
     top: 520px; 
     right:right; 
     bottom:bottom; 
-    left:210px; 
+    left:205px; 
 }
+
 .work {
     position: absolute; 
     top: 730px; 
     right:right; 
     bottom:bottom; 
-    left:290px; 
+    left:280px; 
 }
+
 .contact {
     position: absolute; 
     top: top; 
     right:right; 
-    bottom:-665px; 
+    bottom:-690px; 
     left:170px; 
-}
-.p {
-   position: absolute; 
-    top: px; 
-    right:right; 
-    bottom:bottom; 
-    left:; 
 }
 
 figure h2 {
@@ -144,10 +139,11 @@ section h1 {
     color: var(--dark);
 }
 
-p {
+.bio {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 18px;
     color: var(--dark);
+    text-align: center;
 }
 
 h3 {
@@ -163,6 +159,11 @@ h4 {
 /* Images placements */
 img {
     border: 3px solid var(--light);
+}
+
+#city:hover {
+    opacity: 1.0;
+    background-color: var(--light);
 }
 
 #city {
@@ -182,21 +183,21 @@ img {
 }
    
 #comp {
-    margin-top: 540px;
+    margin-top: 548px;
     margin-bottom: -300px;
     margin-right:-1020px;
     margin-left: 50px;
 }
    
 #mern {
-    margin-top: 700px;
+    margin-top: 708px;
     margin-bottom:-210px;
     margin-right: -500px;
     margin-left: -300px;
 }
      
 #run {
-     margin-top: 660px;
+     margin-top: 675px;
      margin-bottom: -470px;
      margin-right: -1020px ;
      margin-left: 50px;
@@ -211,6 +212,9 @@ footer h1 {
 
 footer ul{
     list-style-type: none;
+    margin-top: 950px;
+    text-align: center;
+    margin-right: 10cm;
 }
 
 footer ul li {
@@ -219,12 +223,20 @@ footer ul li {
     color: #8b8c89;
     text-decoration: underline var(--dark);
     text-underline-offset: 5px;
+    display: inline-block;
 }
+
+footer ul li p {
+    margin-left: 20px;
+}
+
 
 /* media queries: Desktop, Tablet, Mobile */
 @media screen and (max-width: 1074px) {
 }
+
 @media screen and (max-width: 768px) {
 }
+
 @media screen and (max-width: 500px){
 }
